Fixed the spacing between date modified and the date in the rtl versions of the GC Web Usability and Intranet themes.

--- a/src/theme-gcwu-fegc/sass/includes/_default.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default.scss
@@ -251,7 +251,7 @@ div {
 		}
 
 		dd {
-			margin: 0 10px 0 0;
+			margin: 0 0.39em 0 0;
 		}
 	}
 }
